:tada: cadastrando dieta

--- a/dieta/templates/dieta/cadastrar-dieta.html
+++ b/dieta/templates/dieta/cadastrar-dieta.html
@@ -62,6 +62,8 @@
           </div>
         {% endfor %}
 
+        <input type="number" style="display: none;" value="{{dieta.id}}">
+
         <button id="botao-salvar" type="submit">Salvar alterações</button>
       </form>
     </main>
