--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -55,5 +55,13 @@
 
       {% endblock %}
     {% endblock %}
+
+    {% if messages %}
+      <ul class="messages">
+          {% for message in messages %}
+            <li{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</li>
+          {% endfor %}
+      </ul>
+    {% endif %}
   </body>
 </html>
