--- a/dieta/templates/dieta/listar-dietas.html
+++ b/dieta/templates/dieta/listar-dietas.html
@@ -39,7 +39,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Dietas</h1>
 
-        <button class="botao-padrao" id="abrirModal" hx-get={% url 'definir-numero-refeicoes' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
+        <button class="abrirModal botao-padrao" hx-get={% url 'definir-numero-refeicoes' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
           <i class="ph ph-plus"></i>
           Nova dieta
         </button>
