:sparks: redirecionar para lista ao cadastrar dieta

--- a/dieta/templates/dieta/cadastrar-dieta.html
+++ b/dieta/templates/dieta/cadastrar-dieta.html
@@ -62,7 +62,7 @@
           </div>
         {% endfor %}
 
-        <input type="number" style="display: none;" value="{{dieta.id}}">
+        <input type="number" style="display: none;" value="{{dieta.id}}" name="dieta_id">
 
         <button id="botao-salvar" type="submit">Salvar alterações</button>
       </form>
