:hammer: mover logica de criar dieta para uma unica view

--- a/dieta/templates/dieta/collapse.html
+++ b/dieta/templates/dieta/collapse.html
@@ -40,7 +40,7 @@
         <div class="footer-collapse-pacientes">
           <button class="botao-editar">
             <i class="ph ph-pencil-simple-line"></i>
-            <a href="{% url 'editar-dieta' id=dieta.id %}">Editar</a>
+            <a href="{% url 'editar-dieta' dieta_id=dieta.id %}">Editar</a>
           </button>
           <button class="botao-excluir">
             <i class="ph ph-trash"></i>
