--- a/core/templates/core/sidebar.html
+++ b/core/templates/core/sidebar.html
@@ -12,7 +12,7 @@
       </li>
 
       <li class="opcao-do-menu {% if opcao_menu_atual == 'meus-formularios' %}opcao-do-menu-atual{% endif %}">
-          <a href="{% url 'meus-formularios' %}">
+          <a href="{% url 'listar-formularios' %}">
               <i class="ph ph-notepad"></i>
               <span>Formulários</span>
           </a>
