:sparks: criar formulario

--- a/formulario/templates/formulario/criar-formulario.html
+++ b/formulario/templates/formulario/criar-formulario.html
@@ -42,7 +42,7 @@
         <h1>Novo formulário</h1>
       </div>
 
-      <div class="novo-formulario">
+      <form class="novo-formulario" method="post" action="{% url "criar-formulario" %}">
         <div id="container-tipo-formulario">
           <div class="tipo-formulario">
             <input type="radio" name="pre-consulta" id="pre-consulta" />
@@ -56,38 +56,29 @@
         </div>
 
         <div class="container-pergunta">
-          <div class="form-item">
-            <label for="pergunta">Pergunta:</label>
-            <input type="text" placeholder="Ex: Você tem alguma restrição alimentar?" name="pergunta" />
-          </div>
-
-          <div class="form-item">
-            <label for="resposta">Resposta:</label>
-            <textarea name="resposta" placeholder="A resposta do paciente será inserida aqui" id="resposta" cols="30" rows="10"></textarea>
-          </div>
-
-          <div class="footer-pergunta">
-            <div class="checkbox">
-              <input type="checkbox" name="tipo-pergunta" id="tipo-pergunta" />
-              <label for="tipo-pergunta">Pergunta obrigatória</label>
+          {% for questao in questoes %}
+            <div class="form-item">
+              <label for="pergunta_{{questao.id}}">{{questao.nome}}</label>
+              <input type="text" placeholder="Ex: Você tem alguma restrição alimentar?" name="pergunta_{{questao.id}}" />
             </div>
 
-            <button class="botao-excluir-formulario">
-              <i class="ph ph-trash"></i>
-              Excluir
-            </button>
-          </div>
+            <div class="form-item">
+              <label for="resposta_{{questao.id}}">Resposta:</label>
+              <textarea name="resposta_{{questao.id}}" placeholder="A resposta do paciente será inserida aqui" id="resposta" cols="30" rows="10"></textarea>
+            </div>
+
+            {% comment %} <div class="footer-pergunta">
+              <div class="checkbox">
+                <input type="checkbox" name="tipo-pergunta" id="tipo-pergunta_{{questao.id}}" {% if {{questao.e_obrigatoria}} %}checked{% endif %} />
+                <label for="tipo-pergunta_{{questao.id}}">Pergunta obrigatória</label>
+              </div>
+            </div> {% endcomment %}
+          {% endfor %}
         </div>
+        <input type="number" style="display: none;" value="{{formulario.id}}" name="formulario_id">
 
-        <button class="botao-nova-questao" id="abrirModal">
-          <i class="ph ph-plus"></i>
-          Nova questão
-        </button>
-
-        <button id="botao-salvar">Salvar alterações</button>
-      </div>
+        <button id="botao-salvar" type="submit">Salvar alterações</button>
+      </form>
     </section>
   </main>
-  {% include 'formulario/tipo-questao.html' %} 
-</body>
 {% endblock %}
