:sparks: deletar formularios

--- a/formulario/templates/formulario/collapse.html
+++ b/formulario/templates/formulario/collapse.html
@@ -26,7 +26,7 @@
         </button>
         <button class="botao-excluir">
           <i class="ph ph-trash"></i>
-          <a href="#">Excluir</a>
+          <a href="{% url 'deletar-formulario' formulario_id=formulario.id %}">Excluir</a>
         </button>
       </div>
     </div>
