:tada: autenticar nutricionista e paciente

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -32,7 +32,7 @@
       <div class="cabecalho-conteudo-principal">
         <h1>Seus pacientes</h1>
 
-        <button class="botao-padrao" id="abrirModal" hx-get={% url 'cadastrar-paciente' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
+        <button class="abrirModal botao-padrao" hx-get={% url 'cadastrar-paciente' %} hx-trigger='click' hx-target='#modal' hx-swap="innerHTML">
           <i class="ph ph-user-circle-plus"></i>
           Novo paciente
         </button>
