--- a/paciente/templates/paciente/cadastrarPaciente.html
+++ b/paciente/templates/paciente/cadastrarPaciente.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-item">
             <label>Whatsapp</label>
-            {{form.contato}}
+            {{form.whatsapp}}
           </div>
         </div>
         <div class="footer-modal-criar-paciente">
@@ -41,6 +41,9 @@
         </div>
       </form>
     </div>
+
+{{form.errors}}
+
 <script>
   document.getElementById("botao-cancelar-paciente").addEventListener("click", function() {
     var form = document.getElementById("formulario");
