--- a/core/static/core/estilos/estilo.css
+++ b/core/static/core/estilos/estilo.css
@@ -31,8 +31,10 @@ ul {
     list-style: none;
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     gap: 19px;
     width: 100%;
+    height: 100vh;
 }
 
 .opcao-do-menu {
@@ -56,6 +58,16 @@ ul {
     cursor: pointer;
     background-color: rgb(12, 154, 97, 14%);
     transition: all 0.5s;
+}
+
+.opcao-do-menu-up {
+    display: flex;
+    flex-direction: column;
+    gap: 19px;
+}
+
+.opcao-do-menu-down {
+    margin-bottom: 50px;
 }
 
 a {
