--- a/core/templates/core/sidebar.html
+++ b/core/templates/core/sidebar.html
@@ -4,46 +4,59 @@
   <a href="{% url 'listar-pacientes'%}" class="logo"><img src="{% static 'imagens/logo-diet-hub.svg' %}" alt="Logo DietHub" /></a>
 
   <ul>
-      <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-pacientes' %}opcao-do-menu-atual{% endif %}">
-          <a href="{% url 'listar-pacientes'%}">
-              <i class="ph ph-house-line"></i>
-              <span>Home</span>
-          </a>
-      </li>
+    <div class="opcao-do-menu-up">
+        <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-pacientes' %}opcao-do-menu-atual{% endif %}">
+            <a href="{% url 'listar-pacientes'%}">
+                <i class="ph ph-house-line"></i>
+                <span>Home</span>
+            </a>
+        </li>
+    
+        <li class="opcao-do-menu {% if opcao_menu_atual == 'meus-formularios' %}opcao-do-menu-atual{% endif %}">
+            <a href="{% url 'listar-formularios' %}">
+                <i class="ph ph-notepad"></i>
+                <span>Formulários</span>
+            </a>
+        </li>
+    
+        <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-alimentos' %}opcao-do-menu-atual{% endif %}">
+            <a href="{% url 'listar-alimentos' %}">
+                <i class="ph ph-apple-logo"></i>
+                <span>Alimentos</span>
+            </a>
+        </li>
+    
+        <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-dietas' %}opcao-do-menu-atual{% endif %}">
+            <a href="{% url 'listar-dietas' %}">
+                <i class="ph ph-heartbeat"></i>
+                <span>Dietas</span>
+            </a>
+        </li>
+    
+        <li class="opcao-do-menu {% if opcao_menu_atual == 'configuracoes' %}opcao-do-menu-atual{% endif %}">
+            <a href="#">
+                <i class="ph ph-gear-six"></i>
+                <span>Configurações</span>
+            </a>
+        </li>
+    
+        <li class="opcao-do-menu">
+            <a href="#">
+                <i class="ph ph-moon-stars"></i>
+                <span>Tema dark</span>
+            </a>
+        </li>
+    </div>
 
-      <li class="opcao-do-menu {% if opcao_menu_atual == 'meus-formularios' %}opcao-do-menu-atual{% endif %}">
-          <a href="{% url 'listar-formularios' %}">
-              <i class="ph ph-notepad"></i>
-              <span>Formulários</span>
-          </a>
-      </li>
 
-      <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-alimentos' %}opcao-do-menu-atual{% endif %}">
-          <a href="{% url 'listar-alimentos' %}">
-              <i class="ph ph-apple-logo"></i>
-              <span>Alimentos</span>
-          </a>
-      </li>
+    <div class="opcao-do-menu-down">
+        <li class="opcao-do-menu">
+            <a href={% url 'logout' %}>
+                <i class="ph ph-sign-out"></i>
+                <span>Log out</span>
+            </a>
+        </li>
+    </div>
 
-      <li class="opcao-do-menu {% if opcao_menu_atual == 'listar-dietas' %}opcao-do-menu-atual{% endif %}">
-          <a href="{% url 'listar-dietas' %}">
-              <i class="ph ph-heartbeat"></i>
-              <span>Dietas</span>
-          </a>
-      </li>
-
-      <li class="opcao-do-menu {% if opcao_menu_atual == 'configuracoes' %}opcao-do-menu-atual{% endif %}">
-          <a href="#">
-              <i class="ph ph-gear-six"></i>
-              <span>Configurações</span>
-          </a>
-      </li>
-
-      <li class="opcao-do-menu">
-          <a href="#">
-              <i class="ph ph-moon-stars"></i>
-              <span>Tema dark</span>
-          </a>
-      </li>
   </ul>
 </nav>
