--- a/core/static/core/estilos/estilo-diario.css
+++ b/core/static/core/estilos/estilo-diario.css
@@ -36,7 +36,7 @@
     border: 1px solid #F4F3F3;
     background: #FFFFFF;
     max-width: 1024px;
-    padding-top: 31px;
+    padding: 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,6 +52,7 @@
     border: 1px solid #F4F3F3;
     width: 100%;
     font-weight: bold;
+    gap: 12px;
 }
 
 .datas {
