--- a/core/static/core/estilos/estilo.css
+++ b/core/static/core/estilos/estilo.css
@@ -28,12 +28,15 @@ body {
 }
 
 ul {
+    width: 100%;
+}
+
+ul#side-bar {
     list-style: none;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     gap: 19px;
-    width: 100%;
     height: 100vh;
 }
 
