--- a/core/static/core/estilos/estilo-registrar-progresso.css
+++ b/core/static/core/estilos/estilo-registrar-progresso.css
@@ -15,13 +15,7 @@
     width: 100%;
 }
 
-.conteudo-modal {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-#fecharModal {
+.fecharModal {
     position: absolute;
     border: none;
     top: 0;
@@ -30,8 +24,14 @@
     background-color: transparent;
 }
 
-#fecharModal:hover {
+.fecharModal:hover {
     cursor: pointer;
+}
+
+.conteudo-modal {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
 }
 
 .topo-progresso-h1 {
@@ -143,7 +143,7 @@
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: start;
     gap: 73px;
 }
 
