:art: ajustar info paciente

--- a/paciente/templates/paciente/home-paciente.html
+++ b/paciente/templates/paciente/home-paciente.html
@@ -28,8 +28,8 @@
 
       <div class="informacoes-do-usuario">
         <div class="texto-informacoes-do-usuario">
-          <span class="nome-do-usuario">Claudinei Camilo</span>
-          <span class="tipo-de-usuario">Nutricionista</span>
+          <span class="nome-do-usuario">{{paciente.nome}}</span>
+          <span class="tipo-de-usuario">Paciente</span>
         </div>
         <img src="{% static 'imagens/usuario.svg' %}" alt="Logo DietHub" />
       </div>
