--- a/paciente/templates/paciente/cadastrarPaciente.html
+++ b/paciente/templates/paciente/cadastrarPaciente.html
@@ -36,7 +36,7 @@
           </div>
         </div>
         <div class="footer-modal-criar-paciente">
-          <button id="botao-cancelar-paciente" type="button">Cancelar</button>
+          <button id="botao-cancelar" type="button">Cancelar</button>
           <button id="botao-salvar-paciente" type="submit">Salvar</button>
         </div>
       </form>
@@ -45,8 +45,9 @@
 {{form.errors}}
 
 <script>
-  document.getElementById("botao-cancelar-paciente").addEventListener("click", function() {
-    var form = document.getElementById("formulario");
-    form.reset();
+  botaoCancelar = document.querySelector("#botao-cancelar")
+  botaoCancelar.addEventListener("click", function() {
+    const modal = document.getElementById('myModal')
+    modal.close()
   });
 </script>
